@@ -1,3 +1,9 @@
+2008-10-15  Jonathan Pryor  <jpryor@novell.com>
+
+	* fcntl.c: Use Mono_Posix_{From,To}Flock() for flock conversion.
+	* Makefile.am: Include <time.h> in map.c.
+	* map.c, map.h: Flush; adds Flock, Timespec support.
+
 2008-09-14  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* serial.c: When writing bytes and polling, take into account negative
